# pyapi-template

./: .pre-commit-config.yaml  .pytest.ini  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
env.template/: api.env  postgres.env
src/migrations/: config.py  env.py
src/migrations/versions/: 0001_add_the_uuid_ossp_extension.py
src/pyapi/: __main__.py  config.py
src/pyapi/application/common/: pagination.py
src/pyapi/domain/: error_code.py
src/pyapi/infrastructure/: jwt_manager.py
src/pyapi/infrastructure/identity_provider/: api.py  raw.py
src/pyapi/infrastructure/log/: config.py  main.py
src/pyapi/infrastructure/postgres/: config.py  main.py
src/pyapi/infrastructure/postgres/models/: base.py
src/pyapi/interface/: identity_provider.py  jwt_manager.py
src/pyapi/main/: api.py  di.py
src/pyapi/presentation/api/: config.py  main.py  orjson.py
src/pyapi/presentation/api/middlewares/: context.py  structlog.py
src/pyapi/presentation/api/responses/: error.py
src/pyapi/presentation/api/routers/: exceptions.py  main.py
src/pyapi/presentation/api/routers/v1/: health.py
tests/: conftest.py
tests/checkers/: response.py
tests/fixtures/: back_client.py  config.py  di_container.py  fastapi.py
tests/integration/api/: test_get_health.py
