[project]
name = "pyapi"
version = "0.1.0"
description = "PyAPI template for a Python API project"
requires-python = ">=3.14"
readme = "README.md"
license = {file = "LICENSE.md"}

authors = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]
maintainers = [
    { name = "SamWarden", email = "SamWardenSad@gmail.com" },
]

dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "environs>=15.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "orjson>=3.11.8",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = ["pre-commit==4.3.*"]
test = [
    "dirty-equals>=0.11",
    "pytest==9.0.*",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "mypy==1.20.*",
    "ruff==0.15.*",
]

[project.urls]
Homepage = "https://github.com/SamWarden/pyapi"
Repository = "https://github.com/SamWarden/pyapi"
Issues = "https://github.com/SamWarden/pyapi/issues"

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"
